2007-07-14  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_vector_as_array): conversion of vectors to C
	arrays 
	(dfsch_vector_from_array): Conversion of C arrays to vectors

	* src/weak.c: support for weak refrences (probably working)
	Removed ptr_diff_check_array - gcc hapily alocates array of zero
	items
	(dfsch_make_weak_vector): weak-vector datatype (vector of weak
	references)

	* src/promise.c (dfsch_force_promise): 
	FIXED: object_t -> dfsch_object_t

2007-07-10  Ales Hakl  <ales at hakl dot net>

	* src/promise.c (dfsch_force_promise): more R5RS style semantics
	of promises.

	* src/control.c (native_form_unwind_protect): unwind-protect
	special form

2007-07-09  Ales Hakl  <ales at hakl dot net>

	* dfsch/magic.h (DFSCH_UNWIND): unwind-protect like construction
	for C code.

2007-07-01  Ales Hakl  <ales at hakl dot net>

	* src/repl.c: Transcript support

2007-06-24  Ales Hakl  <ales at hakl dot net>

	* lib/unix.c (native_isatty): isatty() wrapper
	(native_kill, native_killpg): kill and killpg wrappers
	(native_raise): raise wrapper
	(native_sig): signal name to number conversion
	(native_open): open() wrapper
	(native_creat): creat() wrapper
	(native_read): read() wrapper
	(native_write): write() wrapper
	(native_chdir): access() wrapper 
	(native_unlink): unlink() wrapper
	(native_rename): rename() wrapper
	(native_rmdir): rmdir() wrapper

	* src/dfsch.c (dfsch_compare_symbol): symbol-string comparison

	* lib/unix.c (dfsch_unix_register): unix syscall interface (some
	basic IO calls are missing for now) 

2007-06-14  Ales Hakl  <ales at hakl dot net>

	* dfsch/magic.h: added comment describing purpose, use and
	ugliness of this file

	* dfsch/lib/load.h, dfsch/parse.h, dfsch/hash.h, dfsch/number.h:
	added file description

	* dfsch/dfsch.h: removed redundant declaration of dfsch_env_get()

2007-03-06  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_exception_write): removed redundant ew_ctx_t
